[gd_scene load_steps=8 format=3 uid="uid://5bep6mdci41m"]

[ext_resource type="PackedScene" uid="uid://cxd28ehaboqeq" path="res://scenes/ui/radial/field.tscn" id="1"]
[ext_resource type="Script" uid="uid://nd3q55l8rl6d" path="res://scenes/ui/radial/radial.gd" id="2"]
[ext_resource type="FontFile" uid="uid://dkpcsi5rudp7j" path="res://assets/fonts/ttf/courier.ttf" id="3_1jwgk"]
[ext_resource type="Texture2D" uid="uid://c1upgftggmnfv" path="res://assets/gui/menu/backgrounds/sub_panel3.png" id="3_60vyb"]

[sub_resource type="Animation" id="1"]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="2"]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_show_menu_done"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_blujx"]
_data = {
&"hide": SubResource("1"),
&"show": SubResource("2")
}

[node name="radial" type="Node2D"]
visible = false
scale = Vector2(1e-05, 1e-05)
script = ExtResource("2")

[node name="fields" type="Node2D" parent="."]

[node name="field1" parent="fields" instance=ExtResource("1")]
visible = false
position = Vector2(0, -200)

[node name="field2" parent="fields" instance=ExtResource("1")]
visible = false
position = Vector2(140, -140)

[node name="field3" parent="fields" instance=ExtResource("1")]
visible = false
position = Vector2(200, 0)

[node name="field4" parent="fields" instance=ExtResource("1")]
visible = false
position = Vector2(140, 140)

[node name="field5" parent="fields" instance=ExtResource("1")]
visible = false
position = Vector2(0, 200)

[node name="field6" parent="fields" instance=ExtResource("1")]
visible = false
position = Vector2(-140, 140)

[node name="field7" parent="fields" instance=ExtResource("1")]
visible = false
position = Vector2(-200, 0)

[node name="field8" parent="fields" instance=ExtResource("1")]
visible = false
position = Vector2(-140, -140)

[node name="label" type="Node2D" parent="."]
visible = false

[node name="background" type="NinePatchRect" parent="label"]
offset_left = -130.0
offset_top = -50.0
offset_right = 130.0
offset_bottom = 50.0
texture = ExtResource("3_60vyb")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="label" type="Label" parent="label"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("3_1jwgk")
text = "Lorem Ipsum"
horizontal_alignment = 1
vertical_alignment = 1

[node name="animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_blujx")
}
speed_scale = 4.0
